# curl-rest

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benches/: builder.rs
examples/: curl.rs  headers.rs
src/: lib.rs
